[tool.poetry]
name = "alphy-telegram-bot"
version = "0.1.0"
description = "Telegram bot with Perplexity AI integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "==13.15"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 