[tool.poetry]
name = "telegram-perplexity-bot"
version = "0.1.0"
description = "A Telegram bot powered by Perplexity AI"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "20.8"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 